0.0.2 fix json issue